# golden_eagle

./: .env  .gitignore  README.md  analyze.py  clarify  clarify.py  effect.txt  facecompare.py  golden-eagle.py  inuwashi.py  pake  pake.py  pyproject.toml  railseiden  railseiden.py  recognition.py  requirements.txt  run.py  security.py  valture.py
analyze/: README.md  analyze_result.txt  facepicture.txt  flakey.py  golden-eagle.py  recognition.py  recognition_ga.py  security.py  security_ga.py  wing-coverts.py  来客.xlsx  顔認識分析.xlsx
golden_eagle/: __init__.py  main.py
golden_eagle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
patch/: README.md  __init__.py  init.patch
tools/: cleaner.rb  ipaddress.py  process.py
unit/: facecompare.py  timestamp.py  xunit.py
wiki/: README.md  manual.md  manual_ja.md
