[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "golden_eagle"
version = "1.0.5.10"
authors = [{ name="Takayuki Kamiyama", email="karuma.reason@gmail.com" }]
description = "Face Recognition Console Application"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
     "Programming Language :: Python :: 3.13",
]
dependencies = ['dlib', 'face-recognition', 'numpy', 'pydantic' , 'opencv-python']

[project.scripts]
facecompare = 'golden_eagle.main:main'

[tool.setuptools.dynamic]
version = {attr = "golden_eagle.__version__"}
